The visualization method has been changed, the output of the pitch of the analyzed sound has been added.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   If you are not redirected automatically,
-  follow the <a href="dist/index.html">link to the documentation</a>
+  follow the <a href="/dist/index.html">link to the documentation</a>
 </body>
 
 </html>
